--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Pig Game</title>
+    <title>Document</title>
   </head>
   <body>
     <div class="game">
       <div class="game__info"></div>
       <div class="player player-1 current-player">
-        <h2 class="player__name player__name-1">PLAYER 1</h2>
-        <span class="player__total-score total-score-1">0</span>
+        <h2 class="player__name">PLAYER 1</h2>
+        <span class="total-score">0</span>
         <div class="current">
           <span class="current-label">current</span>
-          <span class="current-score current-score-1">0</span>
+          <span class="current-score">0</span>
         </div>
       </div>
       <div class="player player-2">
-        <h2 class="player__name player__name-2">PLAYER 2</h2>
-        <span class="player__total-score total-score-2">0</span>
+        <h2 class="player__name">PLAYER 2</h2>
+        <span class="total-score">0</span>
         <div class="current">
           <span class="current-label">current</span>
-          <span class="current-score current-score-2">0</span>
+          <span class="current-score">0</span>
         </div>
       </div>
       <img src="dice-1.png" alt="" class="dice hidden" />
